deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csecho
  labels:
    app: csecho
spec:
  revisionHistoryLimit : 1
  selector:
    matchLabels:
      app: csecho
  template:
    metadata:
      name: csecho
      labels:
        app: csecho
    spec:
      containers:
      - name: csecho
        image: horvatic/csecho:${TAG}
        ports:
          - containerPort: 80
            name: "csecho-http"
