deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csecho
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: csecho-http
  selector:
    app: csecho
