deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csecho-ingress
spec:
  rules:
  - http:
      paths:
      - path: /default/csecho
        pathType: Prefix
        backend:
          service:
            name: csecho
            port: 
              number: 80
